<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Line</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- menu text -->
	<string name="menu_1_1">首页</string>
	<string name="menu_1_2">我的发布</string>
	<string name="menu_1_3">我的抢号</string>
	<string name="menu_1_4">使用说明</string>
	<!-- bar text -->
	<string name="bar_1_right">发布信息</string>
</resources>